<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_task_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <include
        android:id="@+id/toolbar_edit_task"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <EditText
            android:id="@+id/edit_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/add_task_title"
            style="@style/edit_text_theme"
            android:layout_marginHorizontal="10dp" />

        <EditText
            android:id="@+id/edit_task_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_task_title"
            android:hint="@string/add_task_detail"
            style="@style/edit_text_theme"
            android:layout_marginHorizontal="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@id/edit_task_detail"
            android:text="@string/update_task_button"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            style="@style/button_theme"
            android:background="@drawable/background_btn" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_task_detail"
            android:text="@string/cancel_update_task_button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            style="@style/button_theme"
            android:background="@drawable/background_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>