<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksActivity">

    <include
        android:id="@+id/toolbar_task"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_all_tasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tasks_bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:backgroundTint="@color/light_primary"
            android:contentDescription="@string/floating_action_button"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@id/tasks_bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/floating_action_shape" />

        <LinearLayout
            android:id="@+id/tasks_bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/bottom_nav_theme"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/all_tasks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/all_tasks_tab"
                android:textColor="@color/light_primary"
                app:drawableTopCompat="@drawable/ic_all_tasks" />

            <TextView
                android:id="@+id/completed_tasks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/completed_tab"
                app:drawableTopCompat="@drawable/ic_completed" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>